ACTUALLY Ready for 1.8

--- a/DomsCommands/src/plugin.yml
+++ b/DomsCommands/src/plugin.yml
@@ -62,7 +62,7 @@ commands:
       permission: DomsCommands.teleport
    teleporthere:
       description: Teleport another player to you.
-      aliases: [tph, here]
+      aliases: [tph, here, tphere]
       usage: /<command> [player]
       permission: DomsCommands.teleporthere
    teleportall:
